--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,18 +5,18 @@
 	"content_scripts": [
 		{
 			"matches": ["https://platzi.com/*"],
-			"css": ["snippet.css"],
-			"js": ["snippet.js", "course.js"]
+			"css": ["snippet.css", "tutorial.css", "stories.css"],
+			"js": ["invert.js", "course.js", "tutorial.js"]
 		}
 	],
-	"web_accessible_resources": ["static/copy.svg"],
+	"web_accessible_resources": ["static/copy.svg", "static/close.svg", "tut.js", "stories.js"],
 	"short_name": "MP",
 	"icons": {
 		"16": "icons/16.png",
 		"48": "icons/48.png",
 		"128": "icons/128.png"
 	},
-	"version": "0.0.2",
+	"version": "0.0.4",
 	"description": "Un conjunto de mejoras para platzi.com",
 	"author": "Eduardo P. Rivero <jrperedo@gmail.com> (https://blog.eperedo.com/)",
 	"homepage_url": "https://mejorando-platzi.netlify.com",
